--- a/app/templates/add_song.html
+++ b/app/templates/add_song.html
@@ -1,10 +1,11 @@
 {% extends "base_restricted.html" %}
 
-{% block title %}Add album{% endblock %}
+{% block title %}Приложение{% endblock %}
 
 {% block content %}
-<form action="{% url 'add_album'%}" method="post" enctype="multipart/form-data">
+<form action="{% url 'add_song'%}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
+
   <fieldset>
     <legend>Genre:</legend>
     
@@ -16,8 +17,9 @@
     {%endfor%}
 
   </fieldset>
+
   {{form}}
-  <input type="hidden" name="user_id" value="{{request.user.id}}">
+
   <button type="submit">Submit</button>
 </form>
 {% endblock %}
