--- a/app/templates/genre_page.html
+++ b/app/templates/genre_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Search{% endblock %}
+{% block title %}Жанр{% endblock %}
 
 {% block content %}
 <div>
