--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,54 @@
 <!-- templates/base.html -->
 <!DOCTYPE html>
 <html>
-
+  {% load static %}
 <head>
   <meta charset="utf-8">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    .topnav {
+      overflow: hidden;
+      background-color: #333;
+    }
+    
+    .topnav a {
+      float: left;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    
+    .topnav a.active {
+      background-color: #04AA6D;
+      color: white;
+    }
+    </style>
   <title>{% block title %}Next{% endblock %}</title>
 </head>
 
 <body>
-  <main>
+  <div class="topnav">
+    <a href="{% url 'home' %}">Next.fm</a>
+    <a href="{% url 'search'%}">Поиск</a>
+    <a href="{% url 'app'%}">Функции</a>
+  </div>
+  
+  <div style="padding-left:16px" >
     {% block content %}
     {% endblock %}
+  </div>
+  <main>
   </main>
 </body>
 
