--- a/app/templates/add_album.html
+++ b/app/templates/add_album.html
@@ -1,6 +1,6 @@
 {% extends "base_restricted.html" %}
 
-{% block title %}Add album{% endblock %}
+{% block title %}Добавить альбом{% endblock %}
 
 {% block content %}
 <form action="{% url 'add_album'%}" method="post" enctype="multipart/form-data">
