--- a/app/templates/add_review.html
+++ b/app/templates/add_review.html
@@ -1,6 +1,6 @@
 {% extends "base_partial.html" %}
 
-{% block title %}Add album{% endblock %}
+{% block title %}Рецензия{% endblock %}
 
 {% block content %}
 <div style="padding-left:16px" >
