--- a/app/templates/add_song.html
+++ b/app/templates/add_song.html
@@ -1,6 +1,6 @@
 {% extends "base_restricted.html" %}
 
-{% block title %}Приложение{% endblock %}
+{% block title %}Добавить песню{% endblock %}
 
 {% block content %}
 <form action="{% url 'add_song'%}" method="post" enctype="multipart/form-data">
