--- a/app/templates/favorites.html
+++ b/app/templates/favorites.html
@@ -1,6 +1,6 @@
 {% extends "base_partial.html" %}
 
-{% block title %}Add album{% endblock %}
+{% block title %}Подписки{% endblock %}
 
 {% block content %}
 {% for a in artists %}
