--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,8 @@
   <title>{% block title %}Next{% endblock %}</title>
 </head>
 
+{% load has_group %}
+
 <body>
   <div class="topnav">
     <a href="{% url 'home' %}">Next.fm</a>
