--- a/app/templates/add_artist.html
+++ b/app/templates/add_artist.html
@@ -1,6 +1,6 @@
 {% extends "base_restricted.html" %}
 
-{% block title %}Add artist{% endblock %}
+{% block title %}Добавить артиста{% endblock %}
 
 {% block content %}
 <form action="{% url 'add_artist'%}" method="post" enctype="multipart/form-data">
