--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Search{% endblock %}
+{% block title %}Функции{% endblock %}
 
 {% block content %}
 
@@ -39,6 +39,21 @@
     <form action="{% url 'get_favorites'%}" method="post">
         {% csrf_token %}
         <br><input type="submit" class="link-button" value="Избранные исполнители" />
+        <input type="hidden" name="user_id" value="{{request.user.id}}" />
+    </form>
+    <form action="{% url 'get_reviews'%}" method="post">
+        {% csrf_token %}
+        <br><input type="submit" class="link-button" value="Мои рецензии" />
+        <input type="hidden" name="user_id" value="{{request.user.id}}" />
+    </form>
+    <form action="{% url 'add_playlist'%}" method="post">
+        {% csrf_token %}
+        <br><input type="submit" class="link-button" value="Создать плейлист" />
+        <input type="hidden" name="user_id" value="{{request.user.id}}" />
+    </form>
+    <form action="{% url 'get_playlists'%}" method="post">
+        {% csrf_token %}
+        <br><input type="submit" class="link-button" value="Мои плейлисты" />
         <input type="hidden" name="user_id" value="{{request.user.id}}" />
     </form>
 {% else %}
