--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Search{% endblock %}
+{% block title %}Результаты{% endblock %}
 
 {% block content %}
 <div>
