--- a/app/templates/album_page.html
+++ b/app/templates/album_page.html
@@ -3,12 +3,12 @@
 {% block title %}Альбом{% endblock %}
 
 {% block content %}
-<div style="margin-left: 3%; margin-top: 3%;">
+<fieldset style="margin-left: 1%; margin-top: 1%; margin-bottom: 1%; margin-right: 1%;">
     {% load static %}
 
     <form action="{% url 'get_cover' %}" method="post">
         {% csrf_token %}
-        <input type="submit" class="link-button" value="Обложка" />
+        <input type="submit" class="link-button" value="Обложка" style="cursor: pointer; text-decoration: underline; color: #069;background: none!important; padding: 0!important;  border: none; font-family: arial, sans-serif;"/>
         <input type="hidden" name="album_id" value="{{album_id}}" />
     </form>
 
@@ -58,7 +58,7 @@
     Исполнитель:
     <form action="{% url 'artist_page'%}" method="post">
         {% csrf_token %}
-        <input type="submit" class="link-button" value="{{data.1.0}}" />
+        <input type="submit" class="link-button" value="{{data.1.0}}" style="cursor: pointer; font-size: 20px;text-decoration: underline; color: #069;background: none!important; padding: 0!important;  border: none; font-family: arial, sans-serif;"/>
         <input type="hidden" name="artist" value="{{data.1.0}}" />
     </form>
     
@@ -69,7 +69,7 @@
     {% for g in data.3 %}
         <form action="{% url 'genre_page'%}" method="post">
             {% csrf_token %}
-            <input type="submit" class="link-button" value="{{g}}" />
+            <input type="submit" class="link-button" value="{{g}}" style="font-size: 20px;cursor: pointer; text-decoration: underline; color: #069;background: none!important; padding: 0!important;  border: none; font-family: arial, sans-serif;"/>
             <input type="hidden" name="genre" value="{{g}}">
         </form>
     {% endfor %}
@@ -106,6 +106,6 @@
         </div>
       </fieldset>
       {% endfor %}
-</div>
+</fieldset>
 
 {% endblock %}
