--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -56,6 +56,16 @@
         <br><input type="submit" class="link-button" value="Мои плейлисты" />
         <input type="hidden" name="user_id" value="{{request.user.id}}" />
     </form>
+    <form action="{% url 'add_collection'%}" method="post">
+        {% csrf_token %}
+        <br><input type="submit" class="link-button" value="Создать коллекцию" />
+        <input type="hidden" name="user_id" value="{{request.user.id}}" />
+    </form>
+    <form action="{% url 'get_collections'%}" method="post">
+        {% csrf_token %}
+        <br><input type="submit" class="link-button" value="Мои коллекции" />
+        <input type="hidden" name="user_id" value="{{request.user.id}}" />
+    </form>
 {% else %}
 
 {% endif %}
