--- a/app/templates/genre_page.html
+++ b/app/templates/genre_page.html
@@ -10,7 +10,7 @@
 
         <form action="{% url 'album_page'%}" method="post">
             {% csrf_token %}
-            <br><input type="submit" class="link-button" value="{{album.0}}" />
+            <br><input type="submit" class="link-button" value="{{album.0}}" style="cursor: pointer; font-size: 20px;text-decoration: underline; color: #069;background: none!important; padding: 0!important;  border: none; font-family: arial, sans-serif;" />
             <input type="hidden" name="album" value="{{album.0}}">
         </form>
 
